nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: 192.168.99.100.nip.io
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
